bin/testsuite/tests/compiler/src/compiler1464.swg
#global testerror "Err0722"
var @alias = 0 // swc-expected-error {{parser_err_invalid_intrinsic}}